xapian-omega (0.9.6-2) unstable; urgency=low

  * dh_strip handles nostrip in DEB_BUILD_OPTIONS for us, so there's no
    need to check by hand.
  * configure with --disable-dependency-tracking which will save us some
    diskspace and a little time during the build.

 -- Olly Betts <olly@survex.com>  Fri,  9 Jun 2006 02:27:07 +0100

xapian-omega (0.9.6-1) unstable; urgency=low

  * New upstream release.
  * "Standards-Version: 3.7.2" - no changes required.
  * Recommends: httpd-cgi rather than httpd.

 -- Olly Betts <olly@survex.com>  Mon, 15 May 2006 21:20:53 +0100

xapian-omega (0.9.5-2) unstable; urgency=low

  * Really package the man pages.
  * debian/control: Need to list the non-virtual alternative first.
  * Use debian/compat instead of setting DH_COMPAT.
  * dh_install with --fail-missing intead of just --list-missing.
  * Include mbox2omega and mbox2omega.script in the examples directory.

 -- Olly Betts <olly@survex.com>  Sun,  9 Apr 2006 23:59:58 +0100

xapian-omega (0.9.5-1) unstable; urgency=low

  * New upstream release.
    + All installed binaries now have man pages.
  * "Standards-Version: 3.6.2" - no changes required.
  * debian/copyright: Update FSF address and give download URL for releases
    instead of obsolete CVS location.
  * debian/control: Provide non-virtual alternative to httpd in "Recommends:"
    which fixes a Lintian warning.
  * debian/TODO: Updated.
  * New maintainer.

 -- Olly Betts <olly@survex.com>  Sun,  9 Apr 2006 00:42:22 +0100

xapian-omega (0.9.4-2) unstable; urgency=low

  * Fix invalid date line in previous entry.

 -- Richard Boulton <richard@tartarus.org>  Fri,  3 Mar 2006 02:33:36 +0000

xapian-omega (0.9.4-1) unstable; urgency=low

  * New upstream release (no package was made for 0.9.3)
  * Documentation improvements. 
  * omindex: new option --preserve-nonduplicates
  * omindex,scriptindex: new option --stemmer to choose stemmer.
  * omindex: Add support for OpenDocument formats.